# meru

./: .gitignore  LICENSE  README.md  flake.nix
alfred/: .pre-commit-config.yaml  README.md  pyproject.toml
alfred/src/alfred/: __init__.py  config.py  schema.py  server.py
